# grizzhacks

./: .gitignore  HelloWorld.xml  HelloWorld_ModulusScenes.xml  HelloWorld_TwoStep_Move.xml  HelloWorld_topleft.xml  PRD.md  README.md  coordinate_transform.py  example_lesson.json  modulus_backend_scene_swapper.py  modulus_program_swapper.py  modulus_scene_player.py  platformio.ini  run_slideshow.py  tool_detect_optical.xml  tool_optical_topleft.xml
client/: CLIENT_README.md  README.md  ai_lesson.py  lesson_cloud.py  lessons.json  pyproject.toml  send_lesson.py
client/xml/: generated_lesson_with_tools.json  test.xml  xml.xml
client/xml/generated_tools/: Wiring_an_LED_with_ESP32-C3_step_01_tool.xml  Wiring_an_LED_with_ESP32-C3_step_02_tool.xml  Wiring_an_LED_with_ESP32-C3_step_03_tool.xml  Wiring_an_LED_with_ESP32-C3_step_04_tool.xml
default/: README.md  Waiting1.xml  Waiting2.xml
fastapi/: requirements.txt  test_server.py
fastapi/generated_tool_xml/Introduction_to_LED_Control_20260329_063941/: Introduction_to_LED_Control_step_01_tool.xml  Introduction_to_LED_Control_step_02_tool.xml
mobile/: App.tsx  README.md  app.json  package-lock.json  package.json
mongo/: .env.example  README.md  demo_run_xml.py  lightguide_runner.py  main.py  pyproject.toml  websocket_client.py
scenes/: README.md  Scene1.xml  Scene2.xml  Scene3.xml  Scene4.xml
slideshow-generator/: README.md  __init__.py  __main__.py  generate_slideshow.py  lesson_parser.py  pdf_generator.py  requirements.txt  slide_templates.py
src/: config.h  main.cpp
(+18 files in other folders)
